# beats-bitwrap-io

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  Makefile  README.md  ROADMAP-composition.md  TODO.md  canonical.go  composition_card.go  composition_cli.go  go.mod  go.sum  insert_cli.go  insert_notes_handler.go  main.go  metrics.go  qr_test.go  schema_handler.go  seal.go  seal_test.go  share_card_png.go  share_card_png_test.go  share_page.go
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/o/2026/04/: z4EBG9j3Vb7oCHyZPJS1gSW6MzwoSdDd2Ep7xetkD5ZPTffMhr3  z4EBG9jChkAMsEX8gKg94Pp5FTJWJeVhpWbVEG3NZEAUs8ouBNh  z4EBG9jDrZdXZfhGB7VBsykTRer9bQcfXyjgrd1bczKpz6ii39r  z4EBG9jG2vnWwRMqYYvb72iCCzGRquvy58bdyGUXRcJvq2Hdksr  z4EBG9jG5mojx8FYTKwQr5pU3c53S9XBc6bia8Xzaar1q84QFVH
docs/: audio-analysis.md  categorical-index.md
examples/: README.md  hand-authored.json  jurassic-park.json  macro-orchestrated.json  metronome.json  minimal.json  overrides.json  phantom-aqueduct.json  stranger-things.json  tiesto-adagio.json  upside-down-ii.json  voltage-rush.json
internal/audiorender/: BUILD.bazel  cache.go  cache_test.go  composition.go  composition_test.go  insert_counter_melody.go  insert_counter_melody_test.go  inserts.go  inserts_test.go  loudnorm.go  master_chain.go  master_chain_test.go  master_presets.go  mastering.go  renderer.go
internal/deploy/: BUILD.bazel  deploy.go
internal/generator/: BUILD.bazel  arrange.go  arrange_test.go  blast_test.go  cohesion_compose_test.go  composer.go  drum_consistency_test.go  energy.go  euclidean.go  euclidean_test.go  generator.go  groove.go  groove_test.go  markov.go  riffs.go  shuffle.go  stingers.go  stingers_test.go  structure.go  theme.go  theme_parity_test.go  theme_test.go  theory.go  threering.go  variety.go
internal/generator/countermelody/: BUILD.bazel  buildnet.go  countermelody.go  countermelody_test.go
internal/index/: BUILD.bazel  index.go  index_test.go  schema.sql
internal/mcp/: BUILD.bazel  http.go  public.go  public_test.go  server.go
internal/midiout/: BUILD.bazel  midiout.go
internal/pflow/: BUILD.bazel  adapter.go  analyze.go  analyze_test.go  cid.go  macro_schedule_test.go  schema_test.go
internal/rebuildbus/: BUILD.bazel  bus.go  bus_test.go
internal/routes/: BUILD.bazel  eth.go  routes.go  routes_test.go
internal/sequencer/: BUILD.bazel  sequencer.go  sequencer_bench_test.go  sequencer_race_test.go
internal/share/: BUILD.bazel  beats-audio-analysis.context.jsonld  beats-audio-analysis.schema.json  beats-composition.schema.json  beats-share.context.jsonld  beats-share.schema.json  canonical.go  card_layout_smoketest_test.go  category_doc_test.go  composition_test.go  countermelody_envelope_test.go  duration.go  duration_test.go  nets_validation_test.go  note.go  note_test.go  operator_key.go  qr_test.go  render_event.go  schema_handler.go  seal.go  seal_test.go  share_card_png.go  share_card_png_test.go  share_page.go  sigverify.go  sigverify_test.go  snapshot-manifest.context.jsonld  types.go
internal/ws/: BUILD.bazel  hub.go  protocol.go  sequencer.go
public/: archive.html  compose.html  debug.html  feed.html  index.html  manifest.json  petri-note.css  petri-note.js  sequencer-worker.js  sw.js
public/audio/: tone-engine.js
public/docs/: audio-webm-anatomy.html  beat-hub.html  control-category.html  macro-category.html
public/lib/: pflow.js  test-hooks.js
public/lib/audio/: note-name.js  oneshots.js
public/lib/backend/: apc-mini-mk2.js  audio-io.js  index.js  midi-presets.js
public/lib/compose/: main.js
public/lib/feel/: axes.js
public/lib/generator/: arrange.js  composer.js  core.js  countermelody.js  euclidean.js  genre-instruments.js  groove.js  index.js  macros.js  markov.js  regenerate.js  riffs.js  shuffle.js  structure.js  theme.js  theory.js  threering.js  variety.js
public/lib/macros/: catalog.js  effects.js  runtime.js  sched.js
public/lib/note/: note.js
public/lib/project/: serialize.js  sync.js
public/lib/share/: apply.js  card.js  client-render.js  codec.js  collect.js  history.js  insert-render.js  offline-render.js  qr.js  render-mode.js  sign.js  url.js
public/lib/ui/: ai-prompt.js  build.js  canvas.js  controllers.js  device-map.js  dialogs.js  mixer-sliders.js  mixer.js  slider-tip.js  stage.js
public/schema/: beats-composition.context.jsonld  beats-composition.schema.json  beats-share.context.jsonld  beats-share.schema.json  index.json  petri-note.schema.json
schema/: BUILD.bazel  README.md  example-project.json  example-with-skips.json  petri-note.schema.json
scripts/: BUILD.bazel  README.md  analyze-audio.py  draw_beat_hub.py  draw_macro_category.py  dump_macros.mjs  fetch-render.sh  find-blasts.py  measure-jitter.py  process-composition-queue.py  process-rebuild-queue.py  repair-audio.py  run-audio-tests.sh  scan-drum-break.py  seal-share.py  seed-feed.py  test-cohesion-parity.mjs  test-macro-audio.py
tools/: nodejs_test.bzl
