"""beats-bitwrap-io: pure-Bazel (Bzlmod) build.

Deterministic beat generator + share store. Go deps are sourced from go.mod
via Gazelle's go_deps extension, so `go build`/`go test` (and the Makefile)
keep working alongside Bazel.

The core Petri-net library go-pflow is consumed from the local working copy
(go.mod's `replace github.com/pflow-xyz/go-pflow => ../go-pflow`). Gazelle's
go_deps extension reads that replace directive and stages ../go-pflow as the
@com_github_pflow_xyz_go_pflow repo — no bazel_dep wiring needed. beats is the
root module, so its rules_go / Go SDK govern the whole graph.
"""

module(
    name = "beats_bitwrap_io",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.51.3", repo_name = "bazel_gazelle")

# Hermetic Node.js — runs the vanilla-ESM cohesion-parity test (no npm/package.json)
# as a Bazel test target, so `bazel test //...` covers Go<->JS state-root parity.
bazel_dep(name = "rules_nodejs", version = "6.7.4")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.14.0")

# Hermetic Go SDK. beats needs >= 1.26 (chromedp/cdproto). nogo runs static
# analysis at build time.
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")
go_sdk.nogo(nogo = "//:nogo")

# External Go deps come straight from go.mod / go.sum, including the local
# go-pflow replace (staged as @com_github_pflow_xyz_go_pflow).
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# `bazel mod tidy` populates this use_repo list from the go.mod graph.
use_repo(go_deps, "com_github_chromedp_cdproto", "com_github_chromedp_chromedp", "com_github_decred_dcrd_dcrec_secp256k1_v4", "com_github_fogleman_gg", "com_github_gorilla_websocket", "com_github_mark3labs_mcp_go", "com_github_pflow_xyz_go_pflow", "com_github_santhosh_tekuri_jsonschema_v5", "com_github_santhosh_tekuri_jsonschema_v6", "com_github_skip2_go_qrcode", "com_gitlab_gomidi_midi_v2", "org_golang_x_crypto", "org_golang_x_image", "org_modernc_sqlite")
