load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mcp",
    srcs = [
        "http.go",
        "public.go",
        "server.go",
    ],
    importpath = "beats-bitwrap-io/internal/mcp",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/generator",
        "//internal/share",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_mark3labs_mcp_go//server",
    ],
)

go_test(
    name = "mcp_test",
    srcs = ["public_test.go"],
    embed = [":mcp"],
)
