load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rebuildbus",
    srcs = ["bus.go"],
    importpath = "beats-bitwrap-io/internal/rebuildbus",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "rebuildbus_test",
    srcs = ["bus_test.go"],
    embed = [":rebuildbus"],
)
